--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-runtime-environment",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Electron runtime environment that downloads electron on demand (using native components for dialogs)",
   "main": "cli.js",
   "repository": "git@github.com:KhushrajRathod/electronRuntimeEnvironment.git",
@@ -8,5 +8,8 @@
   "license": "GPL-3.0-or-later",
   "bin": {
     "prepare-runtime": "cli.js"
+  },
+  "dependencies": {
+    "rimraf": "^3.0.2"
   }
 }
