--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-runtime-environment",
-  "version": "0.0.12",
+  "version": "0.0.29",
   "description": "Electron runtime environment that downloads electron on demand (using native components for dialogs)",
   "main": "cli.js",
   "repository": "git@github.com:KhushrajRathod/electronRuntimeEnvironment.git",
@@ -10,6 +10,7 @@
     "prepare-runtime": "cli.js"
   },
   "dependencies": {
+    "replace-in-file": "^6.1.0",
     "rimraf": "^3.0.2"
   }
 }
